Comenzare con el adapatador y el ViewHolder

--- a/app/src/main/res/layout/activity_agregarpacientes.xml
+++ b/app/src/main/res/layout/activity_agregarpacientes.xml
@@ -166,5 +166,10 @@
             android:text="Agregar"
             android:textColor="#FFFFFF" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcvPacientes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
 </ScrollView>
