--- a/app/src/main/res/layout/activity_item_paciente.xml
+++ b/app/src/main/res/layout/activity_item_paciente.xml
@@ -7,29 +7,30 @@ android:padding="8dp"
 android:background="@drawable/item_background"
 android:gravity="center_vertical">
 
-<LinearLayout
-    android:layout_width="338dp"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/nombreTextView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/txtNombreCard"
+        android:layout_width="338dp"
         android:layout_height="wrap_content"
-        android:text="Claudia Hernandez"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/enfermedadTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Gripe"
-        android:textColor="#000000"
-        android:textSize="16sp" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/nombreTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Claudia Hernandez"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/enfermedadTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Gripe"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+    </LinearLayout>
 
 <ImageButton
     android:id="@+id/updateButton"
