--- a/app/src/main/res/layout/activity_item_paciente.xml
+++ b/app/src/main/res/layout/activity_item_paciente.xml
@@ -33,7 +33,7 @@ android:gravity="center_vertical">
     </LinearLayout>
 
 <ImageButton
-    android:id="@+id/updateButton"
+    android:id="@+id/imgUpdate"
     android:layout_width="42dp"
     android:layout_height="43dp"
     android:layout_marginEnd="8dp"
@@ -42,7 +42,7 @@ android:gravity="center_vertical">
     android:tint="#800000" />
 
 <ImageButton
-    android:id="@+id/deleteButton"
+    android:id="@+id/imgDelete"
     android:layout_width="39dp"
     android:layout_height="42dp"
     android:background="?android:attr/selectableItemBackground"
