--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -4,21 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DBCBCB"
+    android:background="#620C0C"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/welcome_text"
-        android:layout_width="366dp"
-        android:layout_height="wrap_content"
+        android:layout_width="340dp"
+        android:layout_height="122dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="31dp"
         android:layout_marginTop="319dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="310dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="290dp"
         android:background="#611A1A"
         android:fontFamily="casual"
         android:shadowColor="#000000"
@@ -38,10 +38,10 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="176dp"
-        android:layout_marginTop="521dp"
-        android:layout_marginEnd="-30dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="528dp"
+        android:layout_marginEnd="-14dp"
+        android:layout_marginBottom="12dp"
         app:srcCompat="@drawable/baseline_local_hospital_24" />
 
     <ImageView
