--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -4,30 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#620C0C"
+    android:background="#662828"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/welcome_text"
-        android:layout_width="340dp"
-        android:layout_height="122dp"
+        android:layout_width="wrap_content"
+        android:layout_height="149dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="31dp"
-        android:layout_marginTop="319dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="290dp"
-        android:background="#611A1A"
-        android:fontFamily="casual"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="333dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="249dp"
+        android:background="#662828"
+        android:fontFamily="cursive"
         android:shadowColor="#000000"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1"
         android:text="Bienvenido Profe y Bienvenida esposa del profe, espero les guste esta pequeña pero grandiosa aplicacion, gracias :)"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:textStyle="bold" />
 
     <ImageView
@@ -46,16 +46,16 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="202dp"
-        android:layout_height="204dp"
+        android:layout_width="225dp"
+        android:layout_height="225dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="21dp"
         android:layout_marginTop="18dp"
-        android:layout_marginEnd="188dp"
-        android:layout_marginBottom="509dp"
+        android:layout_marginEnd="165dp"
+        android:layout_marginBottom="488dp"
         app:srcCompat="@drawable/baseline_local_hospital_24" />
 
 </RelativeLayout>
