--- a/app/src/main/res/layout/activity_agregarpacientes.xml
+++ b/app/src/main/res/layout/activity_agregarpacientes.xml
@@ -2,30 +2,30 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D3D3D3"
+    android:background="#B37F7F"
     android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Agregar Pacientes"
-            android:textSize="24sp"
-            android:textStyle="bold"
             android:layout_marginBottom="16dp"
+            android:fontFamily="sans-serif"
+            android:text="Agregar Pacientes"
             android:textColor="#000000"
-            android:fontFamily="sans-serif" />
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#800000"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="16dp"
+            android:background="#800000" />
 
 
         <TextView
@@ -41,15 +41,18 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:background="@drawable/edit_text_background"
-            android:hint="Agregue sus nombres" />
+            android:backgroundTint="#000000"
+            android:drawableTint="#000000"
+            android:hint="Agregue sus nombres"
+            android:textColorLink="#000000" />
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Apellidos:"
-            android:textSize="18sp"
-            android:textColor="#000000" />
+            android:textColor="#000000"
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/txtApellidoP"
@@ -63,8 +66,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Edad:"
-            android:textSize="18sp"
-            android:textColor="#000000" />
+            android:textColor="#000000"
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/txtEdadP"
@@ -80,8 +83,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Enfermedad:"
-            android:textSize="18sp"
-            android:textColor="#000000" />
+            android:textColor="#000000"
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/txtEnfermedadP"
@@ -96,8 +99,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="N° Habitación:"
-            android:textSize="18sp"
-            android:textColor="#000000" />
+            android:textColor="#000000"
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/txtNHabitacionP"
@@ -112,8 +115,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="N° Cama:"
-            android:textSize="18sp"
-            android:textColor="#000000" />
+            android:textColor="#000000"
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/txtNCamaP"
@@ -129,8 +132,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Medicamentos:"
-            android:textSize="18sp"
-            android:textColor="#000000" />
+            android:textColor="#000000"
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/txtNMedicamentosP"
@@ -145,8 +148,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Aplicacion de Medicamentos:"
-            android:textSize="18sp"
-            android:textColor="#000000" />
+            android:textColor="#000000"
+            android:textSize="18sp" />
 
 
         <EditText
